<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:openDrawer="start">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                    android:id="@+id/conf_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_back_arrow"
                    android:gravity="center"
                    android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_marginLeft="50dp"
                android:text="@string/configuracion"/>

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/toolbar">

        <Switch
            android:id="@+id/switchAll"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:checked="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones_subtitulo"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center">
        </TextView>

        <Switch
            android:id="@+id/switchAccident"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Posible_Accidente"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

        <Switch
            android:id="@+id/switchStatus"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Estado_carretera"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

        <Switch
            android:id="@+id/switchSpeed"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Limite_velocidad"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

        <Switch
            android:id="@+id/switchHelp"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Ayuda_intersecciones"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

        <Switch
            android:id="@+id/switchEvents"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Eventos"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

        <Switch
            android:id="@+id/switchCurve"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:text="@string/Curvas_peligrosas"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EFEFEF"/>

    </LinearLayout>

</LinearLayout>
