<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/logScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/gradientbackground"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="150dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center">
                        <ImageView
                            android:id="@+id/profileImage"
                            android:scaleType="centerCrop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_person_white_24dp"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/profileTextName"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wiliam Snoe"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="21sp"/>
                    <TextView
                        android:id="@+id/profileTextEmail"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Wiliam@gmail.com"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_above="@+id/toolbar">

                    <Switch
                        android:id="@+id/switchAll"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/notificaciones"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:checked="false"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"/>

                    <TextView
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/notificaciones_subtitulo"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center">
                    </TextView>

                    <Switch
                        android:id="@+id/switchAccident"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/Posible_Accidente"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                    <Switch
                        android:id="@+id/switchStatus"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/Estado_carretera"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                    <Switch
                        android:id="@+id/switchSpeed"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/Limite_velocidad"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                    <Switch
                        android:id="@+id/switchHelp"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/Ayuda_intersecciones"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                    <Switch
                        android:id="@+id/switchEvents"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/Eventos"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                    <Switch
                        android:id="@+id/switchRoadLine"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="wrap_content"
                        android:text="@string/deteccion_carril"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="#EFEFEF"/>

                </LinearLayout>

                <Button
                    android:id="@+id/profileButtonLanguage"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Seleccionar_idioma" />

                <Button
                    android:id="@+id/profileButtonSingOut"
                    android:textColor="#fff"
                    android:background="@drawable/buttonstyle"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginBottom="50dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>